--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PepperoniAppTemplate",
+  "name": "iHealth",
   "author": "Futurice",
   "description": "React Native App Starter Kit for Android and iOS",
   "license": "MIT",
@@ -20,7 +20,7 @@
   "private": false,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "bundle:ios": "node ./node_modules/react-native/local-cli/cli.js bundle --platform ios --entry-file index.ios.js --bundle-output ios/PepperoniAppTemplate/main.jsbundle --dev=false --minify --verbose",
+    "bundle:ios": "node ./node_modules/react-native/local-cli/cli.js bundle --platform ios --entry-file index.ios.js --bundle-output ios/iHealth/main.jsbundle --dev=false --minify --verbose",
     "test": "mocha src/**/*.spec.js",
     "test:watch": "chokidar 'src/**/*.js' 'test/**/*.js' -c 'npm test'",
     "lint": "eslint src test",
@@ -37,13 +37,14 @@
     "react": "~15.2.0",
     "react-dom": "~15.2.0",
     "react-native": "^0.29.0",
-    "react-native-lock": "futurice/react-native-lock#feature/customizedTheme",
+    "react-native-lock": "github:futurice/react-native-lock#feature/customizedTheme",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
+    "remote-redux-devtools": "^0.3.3",
     "standard-http-error": "^2.0.0"
   },
   "devDependencies": {
