immutable store conflict with apollo reducer

--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "event-emitter": "^0.3.4",
     "graphql-tag": "^0.1.9",
     "immutable": "^3.7.6",
-    "lodash": "^4.11.0",
+    "lodash": "^4.13.1",
     "moment": "^2.12.0",
     "react": "~15.2.0",
+    "react-apollo": "^0.3.19",
     "react-dom": "~15.2.0",
     "react-native": "^0.29.0",
     "react-native-lock": "github:futurice/react-native-lock#feature/customizedTheme",
